{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 9,
  "lineage": "c56bab06-9607-bed6-8f05-96fc35e6a853",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089ed6ce0bb8a81c8",
            "arn": "arn:aws:ec2:us-west-1:692859907639:instance/i-0cadf5a99d0051c7b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cadf5a99d0051c7b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "UCSC2025a",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d42db234b8112184",
            "private_dns": "ip-172-31-13-21.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.13.21",
            "public_dns": "ec2-54-193-12-243.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.12.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ebcd492b1d209121",
                "volume_size": 60,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "jeffm_test_ec2_flask_app",
              "jeffm_test_ec2_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5fad500376e7c16",
            "tags": {
              "Name": "ExampleAppServerInstance"
            },
            "tags_all": {
              "Name": "ExampleAppServerInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00535ff465ae50f87",
              "sg-0588a8cdb629818da"
            ]
          },
          "dependencies": [
            "aws_security_group.jeffm_ucsc_app",
            "aws_security_group.jeffm_ucsc_ssh",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089ed6ce0bb8a81c8",
            "arn": "arn:aws:ec2:us-west-1:692859907639:instance/i-0d93741aed31dd96e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d93741aed31dd96e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "UCSC2025a",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02f1d918a4f56d190",
            "private_dns": "ip-172-31-15-84.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.15.84",
            "public_dns": "ec2-3-101-29-181.us-west-1.compute.amazonaws.com",
            "public_ip": "3.101.29.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-075dc061e6aac3f2d",
                "volume_size": 60,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "jeffm_test_ec2_flask_app",
              "jeffm_test_ec2_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5fad500376e7c16",
            "tags": {
              "Name": "ExampleAppServerInstance"
            },
            "tags_all": {
              "Name": "ExampleAppServerInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00535ff465ae50f87",
              "sg-0588a8cdb629818da"
            ]
          },
          "dependencies": [
            "aws_security_group.jeffm_ucsc_app",
            "aws_security_group.jeffm_ucsc_ssh",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jeffm_ucsc_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:692859907639:security-group/sg-0588a8cdb629818da",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0588a8cdb629818da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "jeffm_test_ec2_flask_app",
            "name_prefix": "",
            "owner_id": "692859907639",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEQAX409-AdvDevOps"
            },
            "tags_all": {
              "Name": "SEQAX409-AdvDevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f2111b9b531325e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jeffm_ucsc_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:692859907639:security-group/sg-00535ff465ae50f87",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00535ff465ae50f87",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jeffm_test_ec2_ssh",
            "name_prefix": "",
            "owner_id": "692859907639",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SEQAX409-AdvDevOps"
            },
            "tags_all": {
              "Name": "SEQAX409-AdvDevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f2111b9b531325e"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}